# OpenGL-maybe-tutorial-maybe-not

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile
include/: lib.h  render.h
include/glad/: gl.h
lib/: render.c
src/: main.c
